fix: decrease z-index of banner text

--- a/src/sass/_common/components.scss
+++ b/src/sass/_common/components.scss
@@ -342,7 +342,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     cursor: pointer;
-    z-index: 2;
+    z-index: 1;
 
     @media (max-width: 768px) {
         top: 7px;
@@ -414,7 +414,7 @@
             display: flex;
             align-items: center;
             justify-content: space-evenly;
-            z-index: 2;
+            z-index: 1;
 
             @media only screen and (max-width: 768px) {
                 width: 40%;
@@ -469,7 +469,7 @@
         }
         &_text {
             width: 50%;
-            z-index: 2;
+            z-index: 1;
             display: flex;
             align-items: center;
             justify-content: space-evenly;
